[package]
name = "qutee"
version = "0.1.0"
edition = "2021"
keywords = ["quadtree", "data structure", "2d"]
authors = ["Julian Alberts"]
description = "A small qute implementation of a quadtree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
thiserror = "1.0.40"

[dev-dependencies]
test-case = "3.0.0"
