[package]
name = "qutee"
version = "0.2.1"
edition = "2021"
keywords = ["quadtree", "2d"]
categories = ["data-structures"]
authors = ["Julian Alberts"]
description = "A quadtree implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Julian-Alberts/qutee"
exclude = [ "benches/100_000.csv" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
test-case = "3.0"

[[bench]]
name = "my_benchmark"
harness = false
